2015-12-25  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline
        2015-12-25  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/rs6000/freebsd64.h: Delete FREEBSD_DYNAMIC_LINKER32/64
	defines. Use FBSD_DYNAMIC_LINKER instead.
	Rename and simplify LINK_OS_FREEBSD_SPEC_DEF32/64 to
	LINK_OS_FREEBSD_SPEC_DEF.

2015-12-22  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	PR target/68872
	* config/rs6000/rs6000.h (ASM_CPU_SPEC): For -mcpu=powerpc64le,
	pass %(asm_cpu_power8).

2015-12-18  John David Anglin  <danglin@gcc.gnu.org>

	PR target/68729
	* config/pa/pa.c (pa_emit_move_sequence): Reorganize handling of
	floating-point reloads. Only reload operands that are not valid
	floating-point memory operands.

2015-12-17  John David Anglin  <danglin@gcc.gnu.org>

	PR target/68779
	* config/pa/pa.md (atomic_loaddi): Honor -mdisable-fpregs.
	(atomic_loaddi_1): Likewise.
	(atomic_storedi): Likewise.
	(atomic_storedi_1): Likewise.
	Move all atomic patterns to end of file.

2015-12-09  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline
	2015-12-09  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/rs6000/freebsd64.h: Remove the redefinition of WCHAR_TYPE.

2015-12-10  Jeff Law  <law@redhat.com>

	PR tree-optimization/61515
	PR tree-optimization/46590
	Backport from mainline.
	* tree-ssa-threadedge.c (invalidate_equivalences): Walk the unwinding
	stack rather than looking at every SSA_NAME's value.

2015-12-10  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2015-12-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/68701
	* config/i386/i386.c (ix86_option_override_internal): Enable
	-maccumulate-outgoing-args when %ebp is fixed due to stack
	realignment requirements.

2015-12-09  John David Anglin  <danglin@gcc.gnu.org>

	PR target/68729
	* config/pa/pa.c (pa_emit_move_sequence): Don't check that mode is
	consistent with modes of the input and output operands when doing